--- a/src/components/EntryCard/styles.module.css
+++ b/src/components/EntryCard/styles.module.css
@@ -1,7 +1,23 @@
 .container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  padding: 1rem;
+  margin: 0.5rem;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  transition: all 0.3s ease-out;
+  background-color: rgb(35, 35, 71);
+  box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
   color: #fafafa;
+}
+
+.container:hover {
+  background-color: rgb(44, 44, 109);
+}
+
+.name {
+  font-size: 1.5rem;
+  font-weight: 500;
 }
