--- a/src/components/ProjectCard/styles.module.css
+++ b/src/components/ProjectCard/styles.module.css
@@ -8,12 +8,13 @@
   cursor: pointer;
   border-radius: 0.25rem;
   transition: all 0.3s ease-out;
-  background-color: rgb(35, 35, 71);
+  background-color: rgb(29, 29, 58);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
+  animation: popUp 0.5s ease-out;
 }
 
 .container:hover {
-  background-color: rgb(44, 44, 109);
+  background-color: rgb(44, 44, 121);
 }
 
 .name {
@@ -28,5 +29,17 @@
   cursor: pointer;
   font-size: 1.25rem;
   font-weight: 700;
-  color: #f8073c;
+  color: #e44545;
+}
+
+@keyframes popUp {
+  from {
+    opacity: 0;
+    margin-bottom: -3rem;
+  }
+
+  to {
+    opacity: 1;
+    margin-bottom: 0rem;
+  }
 }
