--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0rem 2rem;
 }
 
 .header {
@@ -49,4 +50,5 @@
   font-size: 1.5rem;
   font-weight: 500;
   width: 100%;
+  margin-bottom: 1rem;
 }
