--- a/src/components/EntryCard/styles.module.css
+++ b/src/components/EntryCard/styles.module.css
@@ -11,6 +11,7 @@
   background-color: rgb(35, 35, 71);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
   color: #fafafa;
+  animation: appear 0.4s ease-in-out;
 }
 
 .container:hover {
@@ -20,4 +21,16 @@
 .name {
   font-size: 1.5rem;
   font-weight: 500;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    margin-bottom: -5rem;
+  }
+
+  to {
+    opacity: 1;
+    margin-bottom: 0rem;
+  }
 }
