--- a/src/components/ProjectCard/styles.module.css
+++ b/src/components/ProjectCard/styles.module.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,7 +9,7 @@
   transition: all 0.3s ease-out;
   background-color: rgb(29, 29, 58);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
-  animation: popUp 0.5s ease-out;
+  animation: popUp 0.4s ease-out calc(0.1s) forwards;
 }
 
 .container:hover {
@@ -27,9 +26,17 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  font-size: 1.25rem;
-  font-weight: 700;
-  color: #e44545;
+}
+
+.icon {
+  width: 2.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border-radius: 50%;
+}
+
+.icon:hover {
+  transform: scale(1.1);
 }
 
 @keyframes popUp {
@@ -40,6 +47,6 @@
 
   to {
     opacity: 1;
-    margin-bottom: 0rem;
+    margin-bottom: 0.5rem;
   }
 }
