--- a/src/components/EntriesTable/styles.module.css
+++ b/src/components/EntriesTable/styles.module.css
@@ -1,3 +1,23 @@
 .container {
   width: 100%;
+  background-color: rgba(53, 52, 52, 0.226);
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  border: 2px solid rgba(44, 44, 141, 0.452);
+}
+
+.tableHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 0rem 0.5rem;
+}
+
+.tableHeader > h1 {
+  display: flex;
+  flex: 1;
+  color: #fafafa;
+  font-size: 1.25rem;
+  font-weight: 700;
 }
