--- a/src/components/EntryCard/styles.module.css
+++ b/src/components/EntryCard/styles.module.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -18,9 +17,11 @@
   background-color: rgb(44, 44, 109);
 }
 
-.name {
-  font-size: 1.5rem;
+.container > span {
+  font-size: 1rem;
   font-weight: 500;
+  display: flex;
+  flex: 1;
 }
 
 @keyframes appear {
