--- a/src/components/ProjectCard/styles.module.css
+++ b/src/components/ProjectCard/styles.module.css
@@ -3,13 +3,13 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0rem;
   cursor: pointer;
   border-radius: 0.25rem;
   transition: all 0.3s ease-out;
   background-color: rgb(29, 29, 58);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
-  animation: popUp 0.4s ease-out calc(0.1s) forwards;
+  animation: popUp 0.4s ease-out;
 }
 
 .container:hover {
