--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -30,7 +30,7 @@
   font-size: 0.9rem;
   font-weight: 500;
   color: #fafafa;
-  background-color: rgb(105, 11, 255);
+  background-color: var(--primary-color);
   border: none;
   border-radius: 0.25rem;
   outline: none;
@@ -50,6 +50,33 @@
   color: #ebe5e5;
   font-size: 1.5rem;
   font-weight: 500;
-  width: 100%;
   margin-bottom: 1rem;
+}
+
+.breadcrumbsContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0rem 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.createFolderBtn {
+  border: 1px solid rgb(31, 199, 59);
+  border-radius: 0.25rem;
+  padding: 0.5rem 0.75rem;
+  font-size: 0.85rem;
+  font-weight: 700;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+.createFolderBtn:hover {
+  background-color: rgb(31, 199, 59);
+  color: #131313;
+  font-weight: 900;
+  transform: scale(1.05);
 }
