--- a/src/components/EntryCard/styles.module.css
+++ b/src/components/EntryCard/styles.module.css
@@ -22,6 +22,12 @@
   font-weight: 500;
   display: flex;
   flex: 1;
+  width: 100%;
+}
+
+.tags {
+  display: flex;
+  flex: 1;
 }
 
 @keyframes appear {
