--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,18 @@
 .container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0rem 2rem;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0rem 2rem;
 }
 
@@ -13,8 +23,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 2rem 0rem;
-  border-bottom: 1px solid #fafafa;
-  margin: 0rem 2rem;
+  margin: 1rem 2rem;
 }
 
 .title {
@@ -30,7 +39,7 @@
   font-size: 0.9rem;
   font-weight: 500;
   color: #fafafa;
-  background-color: var(--primary-color);
+  background-color: rgb(105, 11, 255);
   border: none;
   border-radius: 0.25rem;
   outline: none;
@@ -59,7 +68,7 @@
   justify-content: space-between;
   width: 100%;
   margin: 0rem 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .createFolderBtn {
@@ -67,16 +76,15 @@
   border-radius: 0.25rem;
   padding: 0.5rem 0.75rem;
   font-size: 0.85rem;
-  font-weight: 700;
+  font-weight: 500;
   color: white;
   background-color: transparent;
   cursor: pointer;
-  transition: all var(--animation-duration) ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .createFolderBtn:hover {
   background-color: rgb(31, 199, 59);
   color: #131313;
-  font-weight: 900;
   transform: scale(1.05);
 }
