--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
+:root {
+  /* ANIMATION */
+  --animation-duration: 0.4s;
+  --animation-easing: ease-in-out
+
+  /* COLORS */
+  --primary-color: rgb(105, 11, 255);
+  --secondary-color: rgb(31, 199, 59);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,6 +21,10 @@ body {
   overflow-x: hidden;
   font-family: "Raleway", sans-serif;
   background-color: #111117;
+}
+
+#__next {
+  height: 100vh;
 }
 
 .ReactModal__Overlay,
