--- a/src/components/EntriesTable/styles.module.css
+++ b/src/components/EntriesTable/styles.module.css
@@ -3,7 +3,9 @@
   background-color: rgba(53, 52, 52, 0.226);
   border-radius: 0.25rem;
   padding: 0.5rem;
-  border: 2px solid rgba(44, 44, 141, 0.452);
+  border: 2px solid rgba(64, 64, 214, 0.699);
+  box-shadow: 0 0 0.5rem 0.25rem rgba(255, 255, 255, 0.025);
+  overflow: hidden;
 }
 
 .tableHeader {
