--- a/src/components/CreateEntry/styles.module.css
+++ b/src/components/CreateEntry/styles.module.css
@@ -1,33 +1,62 @@
 .container {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.title {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
+  transition: all 0.4s ease-in-out;
 }
 
 .time {
-  font-size: 1.25rem;
+  width: 100%;
+  text-align: center;
+  font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 1rem;
+  background-color: rgb(242, 238, 245);
+  padding: 1rem 0.75rem;
+  border-radius: 0.25rem;
 }
 
 .nameInput {
-  width: 50%;
+  width: 100%;
   margin-bottom: 1rem;
   font-size: 0.85rem;
   padding: 0.5rem;
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 0.95rem;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: rgb(255, 255, 255) !important;
+  border: none;
+  border-radius: 0.25rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.select {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: rgb(255, 255, 255) !important;
+  border: none;
+  border-radius: 0.25rem;
+  margin-bottom: 2rem;
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
+    no-repeat;
+  background-position: calc(100% - 0.5rem) center !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
 }
 
 .startBtn {
-  width: 50%;
-  padding: 0.5rem 1rem;
+  width: 100%;
+  padding: 1rem;
   cursor: pointer;
   outline: none;
   border: none;
@@ -40,14 +69,21 @@
 }
 
 .endBtn {
-  width: 50%;
-  padding: 0.5rem 1rem;
+  width: 100%;
+  padding: 1rem;
   cursor: pointer;
   outline: none;
-  border: 2px solid rgb(102, 7, 190);
+  background-color: rgb(102, 7, 190);
   border-radius: 0.25rem;
-  font-weight: 500;
+  border: none;
+  font-weight: 700;
   font-size: 0.9rem;
-  color: rgb(102, 7, 190);
+  color: rgb(250, 250, 250);
   margin-bottom: 1rem;
+}
+
+.savingLabel {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fafafa;
 }
