--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,11 +37,14 @@ body {
 
 .ReactModal__Content,
 .ReactModal__Content--after-open {
+  position: relative !important;
   width: 100%;
-  max-width: 450px;
+  max-width: 325px;
   inset: 0px !important;
   position: relative !important;
-  padding: 4rem 0rem !important;
-  background-color: rgb(228, 235, 248) !important;
+  background-color: rgba(27, 27, 27, 0.85) !important;
   margin: 2rem;
+  box-shadow: 0px 0px 23px 7px rgba(255,255,255,0.1);
+  padding: 3rem !important;
+  border-radius: 0.5rem !important;
 }
