--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,4 +47,17 @@ body {
   box-shadow: 0px 0px 23px 7px rgba(255,255,255,0.1);
   padding: 3rem !important;
   border-radius: 0.5rem !important;
+  animation: modalPopUp 0.4s cubic-bezier(0.215, 0.610, 0.355, 1) !important;
+}
+
+@keyframes modalPopUp {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
