--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -62,9 +62,13 @@
 
 .subtitle {
   color: #ebe5e5;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .breadcrumbsContainer {
@@ -74,6 +78,16 @@
   width: 100%;
   margin: 0rem 0.5rem;
   margin-bottom: 1rem;
+}
+
+.projectsIcon {
+  margin-right: 0.5rem;
+  transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  animation: projectsIconAnimation 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.projectsIcon:hover {
+  transform: scale(1.1);
 }
 
 .createFolderBtn {
@@ -94,6 +108,11 @@
   transform: scale(1.05);
 }
 
+.breadcrumbsProjectName {
+  margin-left: 0.5rem;
+  font-weight: 500;
+}
+
 .closeBtn {
   position: absolute;
   top: 1rem;
@@ -105,4 +124,15 @@
   color: #fafafa;
   font-size: 0.9rem;
   font-size: 700;
+}
+
+@keyframes projectsIconAnimation {
+  from {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
