--- a/src/components/CreateEntry/styles.module.css
+++ b/src/components/CreateEntry/styles.module.css
@@ -13,10 +13,10 @@
   text-align: center;
   font-size: 2.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
   background-color: rgb(242, 238, 245);
   padding: 1rem 0.75rem;
   border-radius: 0.25rem;
+  margin: 1rem 0rem;
 }
 
 .nameInput {
