--- a/src/components/CreateEntry/styles.module.css
+++ b/src/components/CreateEntry/styles.module.css
@@ -19,17 +19,23 @@
   margin: 1rem 0rem;
 }
 
+.clearTime {
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: rgb(249, 249, 250);
+  cursor: pointer;
+}
+
 .nameInput {
   width: 100%;
   margin-bottom: 1rem;
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   padding: 0.5rem;
   width: 100%;
-  padding: 0.5rem;
-  font-size: 0.95rem;
+  padding: 0.75rem;
   font-weight: 500;
   cursor: pointer;
-  background-color: rgb(255, 255, 255) !important;
+  background-color: rgb(250, 250, 250) !important;
   border: none;
   border-radius: 0.25rem;
   margin-top: 1rem;
@@ -39,21 +45,7 @@
   height: 75px;
   width: 100%;
   margin-bottom: 1rem;
-  font-size: 0.85rem;
   padding: 0.5rem;
-  width: 100%;
-  padding: 0.5rem;
-  font-size: 0.95rem;
-  font-weight: 400;
-  cursor: pointer;
-  background-color: rgb(255, 255, 255) !important;
-  border: none;
-  border-radius: 0.25rem;
-  margin-bottom: 1rem;
-  font-family: "Raleway";
-}
-
-.select {
   width: 100%;
   padding: 0.5rem;
   font-size: 0.9rem;
@@ -62,13 +54,21 @@
   background-color: rgb(255, 255, 255) !important;
   border: none;
   border-radius: 0.25rem;
+  margin-bottom: 1rem;
+  font-family: "Raleway";
+}
+
+.dropdown {
+  width: 100% !important;
+  margin-bottom: 1rem;
+}
+
+.multiselect {
+  width: 100% !important;
+  font-size: 0.9rem;
+  font-weight: 500;
+  cursor: pointer;
   margin-bottom: 2rem;
-  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
-    no-repeat;
-  background-position: calc(100% - 0.5rem) center !important;
-  -moz-appearance: none !important;
-  -webkit-appearance: none !important;
-  appearance: none !important;
 }
 
 .startBtn {
@@ -79,8 +79,8 @@
   border: none;
   background-color: rgb(102, 7, 190);
   border-radius: 0.25rem;
-  font-weight: 500;
-  font-size: 0.9rem;
+  font-weight: 700;
+  font-size: 1rem;
   color: #fafafa;
   margin-bottom: 1rem;
 }
@@ -94,7 +94,7 @@
   border-radius: 0.25rem;
   border: none;
   font-weight: 700;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: rgb(250, 250, 250);
   margin-bottom: 1rem;
 }
