--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -127,6 +127,38 @@
   font-size: 700;
 }
 
+.stats {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+  justify-content: space-between;
+}
+
+.statContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  color: floralwhite;
+  font-size: 1.25rem;
+  padding: 0.25rem 0.5rem;
+  border-bottom: 2px solid #fafafa;
+  /* border-right: 2px solid #fafafa; */
+  border-radius: 0.25rem;
+}
+
+.statTitle {
+  font-size: 0.85em;
+  font-weight: 300;
+  color: #fafafa;
+}
+
+.statValue {
+  font-size: 1.75rem;
+  font-weight: 700;
+  color: #fafafa;
+}
+
 @keyframes projectsIconAnimation {
   from {
     transform: scale(0.5);
