✨ Add entries table pagination

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -143,7 +143,7 @@
   font-size: 1.25rem;
   padding: 0.25rem 0.5rem;
   border-bottom: 2px solid #fafafa;
-  /* border-right: 2px solid #fafafa; */
+  border-right: 2px solid #fafafa;
   border-radius: 0.25rem;
 }
 
