--- a/src/components/EntriesTable/styles.module.css
+++ b/src/components/EntriesTable/styles.module.css
@@ -6,6 +6,7 @@
   border: 2px solid rgba(64, 64, 214, 0.699);
   box-shadow: 0 0 0.5rem 0.25rem rgba(255, 255, 255, 0.025);
   overflow: hidden;
+  margin-bottom: 1rem;
 }
 
 .tableHeader {
@@ -22,4 +23,52 @@
   color: #fafafa;
   font-size: 1.25rem;
   font-weight: 700;
+}
+
+.pagination {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.pageBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.25rem;
+  background-color: rgba(64, 64, 214, 0.699);
+  color: #fafafa;
+  font-size: 0.85rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
+  padding: 0.5rem 0rem;
+  height: max-content;
+  border: none;
+  width: 4.5rem;
+}
+
+.pageNumber {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0.25rem;
+  background-color: rgba(33, 33, 34, 0.699);
+  color: #fafafa;
+  font-size: 1.25rem;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
 }
