--- a/src/components/EntryCard/styles.module.css
+++ b/src/components/EntryCard/styles.module.css
@@ -10,7 +10,7 @@
   background-color: rgb(35, 35, 71);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
   color: #fafafa;
-  animation: appear 0.4s ease-in-out;
+  animation: appear 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .container:hover {
@@ -33,11 +33,9 @@
 @keyframes appear {
   from {
     opacity: 0;
-    margin-bottom: -5rem;
   }
 
   to {
     opacity: 1;
-    margin-bottom: 0rem;
   }
 }
