--- a/src/components/ProjectCard/styles.module.css
+++ b/src/components/ProjectCard/styles.module.css
@@ -9,7 +9,9 @@
   transition: all 0.3s ease-out;
   background-color: rgb(29, 29, 58);
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.13);
-  animation: popUp 0.4s ease-out;
+  animation: popUp 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+  opacity: 0;
+  transform: scale(0.8);
 }
 
 .container:hover {
@@ -42,11 +44,11 @@
 @keyframes popUp {
   from {
     opacity: 0;
-    margin-bottom: -3rem;
+    transform: scale(0.8);
   }
 
   to {
     opacity: 1;
-    margin-bottom: 0.5rem;
+    transform: scale(1);
   }
 }
